--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,6 @@
   top: 10%;
   height: 70%;
   width: 10%;
-  border: 1px solid black;
-  background-color: aliceblue;
 }
 
 .dice-wrapper {
@@ -21,8 +19,51 @@
 }
 
 .scoreBoard {
-  border: solid black 1px;
   margin-top: 5%;
   height: 20em;
+  display: flex;
+  flex-direction: column;
 }
 
+.scoreButton {
+  justify-content: center;
+  height: 1.5em;
+}
+
+.btn-left {
+  float: left;
+  margin-top: 0%;
+}
+
+.btn-right {
+  float: right;
+  margin-top: 0%;
+}
+
+.scores {
+  display: flex;
+  justify-content: space-between;
+  background-color: aquamarine;
+}
+
+.total {
+  float: left;
+  margin-left: 1em;
+}
+
+.high {
+  margin-right: 1em;
+  float: right;
+}
+
+.newGame {
+  margin-left: 45%;
+  width: 10em;
+  height: 5em;
+  padding: 1em;
+}
+
+img {
+  height: 100%;
+  width: 100%;
+}
